@@ -1,3 +1,10 @@
+Mon Nov 16 01:11:02 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* mvm.c (ruby_vm_new): create new vm unless initial vm.
+
+	* thread.c (thread_start_func_2): ruby_vm_destruct destroys
+	  global_vm_lock.
+
 Mon Nov 16 01:08:58 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* thread.c (rb_thread_start_timer_thread),
